Oppdater Swagger-dokumentasjon for rnot001 og ta i bruk records
Co-authored-by: Christian Tumyr <christian.tumyr@nav.no>