@@ -10,10 +10,8 @@ import java.util.Comparator;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import static no.nav.doknotifikasjon.TestUtils.KONTAKTINFO;
-import static no.nav.doknotifikasjon.TestUtils.OPPRETTET_DATO;
 import static no.nav.doknotifikasjon.TestUtils.SENDT_DATO;
 import static no.nav.doknotifikasjon.TestUtils.TEKST;
 import static no.nav.doknotifikasjon.TestUtils.TITTEL;
@@ -36,28 +34,27 @@ public class Rnot001MapperTest {
 
 		NotifikasjonInfoTo notifikasjonInfoTo = Rnot001Mapper.mapNotifikasjon(notifikasjon);
 
-		assertThat(notifikasjonInfoTo.getId(), is(notifikasjon.getId()));
-		assertThat(notifikasjonInfoTo.getBestillerId(), is(notifikasjon.getBestillerId()));
-		assertThat(notifikasjonInfoTo.getStatus(), is(notifikasjon.getStatus()));
-		assertThat(notifikasjonInfoTo.getAntallRenotifikasjoner(), is(notifikasjon.getAntallRenotifikasjoner()));
-		assertThat(notifikasjonInfoTo.getNotifikasjonDistribusjoner().size(), is(notifikasjon.getNotifikasjonDistribusjon().size()));
-		List<NotifikasjonDistribusjonDto> distribusjonDtos = notifikasjonInfoTo.getNotifikasjonDistribusjoner().stream()
-				.sorted(Comparator.comparing(NotifikasjonDistribusjonDto::getId))
-				.collect(Collectors.toList());
+		assertThat(notifikasjonInfoTo.id(), is(notifikasjon.getId()));
+		assertThat(notifikasjonInfoTo.bestillerId(), is(notifikasjon.getBestillerId()));
+		assertThat(notifikasjonInfoTo.status(), is(notifikasjon.getStatus()));
+		assertThat(notifikasjonInfoTo.antallRenotifikasjoner(), is(notifikasjon.getAntallRenotifikasjoner()));
+		assertThat(notifikasjonInfoTo.notifikasjonDistribusjoner().size(), is(notifikasjon.getNotifikasjonDistribusjon().size()));
+		List<NotifikasjonDistribusjonDto> distribusjonDtos = notifikasjonInfoTo.notifikasjonDistribusjoner().stream()
+				.sorted(Comparator.comparing(NotifikasjonDistribusjonDto::id)).toList();
 
-		assertThat(notifikasjonInfoTo.getNotifikasjonDistribusjoner().size(), is(2));
+		assertThat(notifikasjonInfoTo.notifikasjonDistribusjoner().size(), is(2));
 		assertNotifikasjonDistribusjon(distribusjonDtos.get(0), 1, SMS, null);
 		assertNotifikasjonDistribusjon(distribusjonDtos.get(1), 2, EPOST, TITTEL);
 	}
 
 	private void assertNotifikasjonDistribusjon(NotifikasjonDistribusjonDto notifDistDto, int id, Kanal kanal, String tittel) {
-		assertThat(notifDistDto.getId(), is(id));
-		assertThat(notifDistDto.getStatus(), is(Status.FERDIGSTILT));
-		assertThat(notifDistDto.getKanal(), is(kanal));
-		assertThat(notifDistDto.getKontaktInfo(), is(KONTAKTINFO));
-		assertThat(notifDistDto.getTittel(), is(tittel));
-		assertThat(notifDistDto.getTekst(), is(TEKST));
-		assertThat(notifDistDto.getSendtDato(), is(SENDT_DATO));
+		assertThat(notifDistDto.id(), is(id));
+		assertThat(notifDistDto.status(), is(Status.FERDIGSTILT));
+		assertThat(notifDistDto.kanal(), is(kanal));
+		assertThat(notifDistDto.kontaktInfo(), is(KONTAKTINFO));
+		assertThat(notifDistDto.tittel(), is(tittel));
+		assertThat(notifDistDto.tekst(), is(TEKST));
+		assertThat(notifDistDto.sendtDato(), is(SENDT_DATO));
 	}
 
 }
